--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,10 +1,10 @@
-<mvc:View controllerName="pecogaapordenescompras.controller.Main" xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns="sap.m" xmlns:form="sap.ui.layout.form" xmlns:f="sap.ui.layout.form" xmlns:layout="sap.ui.layout">
-    <SplitApp id="SplitApp">
+<mvc:View controllerName="pecogaapordenescompras.controller.Main" xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns="sap.m" xmlns:form="sap.ui.layout.form" xmlns:f="sap.ui.layout.form" xmlns:layout="sap.ui.layout" xmlns:uxap="sap.uxap">
+    <SplitApp id="SplitApp" mode="ShowHideMode">
         <masterPages>
             <Page id="page" title="{i18n>view.Master.title} {= ${path: '/WorkflowTaskCollection'}.length}">
                 <content>
                     <List id="list" mode="MultiSelect"
-                        includeItemInSelection="false"
+                        includeItemInSelection="true"
                         selectionChange="fireSelectionChange"
                         items="{
                             path: '/WorkflowTaskCollection',
@@ -48,24 +48,25 @@
                 </footer>
             </Page>
         </masterPages>
+
         <detailPages>
             <Page id="WIDetail" title="{i18n>view.PurchaseOrder.title}" class="sapUiFioriObjectPage">
                 <content>
                     <!-- Header of S3 screen -->
-                    <ObjectHeader id="Header" introPress="onAgentPress" introActive="true" title="{header>/SupplierName}" titlePress="onVendorPress" titleActive="true"
+                    <ObjectHeader id="Header" introPress="onAgentPress" introActive="true" title="{header>/SupplierName}" titlePress="onShowQuickViewProveedor" titleActive="true"
                     number="{path : 'header>/Value', formatter: '.formatMoney'}" numberUnit="{header>/Currency}">
                         <firstStatus>
                             <ObjectStatus id="ObjectHeaderStatusWiCreatedAt"
                                 text="{path: 'header>/WiCreatedAt', formatter: '.formatFechaUTC'}"></ObjectStatus>
                         </firstStatus>
                         <attributes>
-                            <ObjectAttribute id="ObjectHeaderAttributeCreatedByName" text="{header>/CreatedByName}" press="onNamePress" active="true"></ObjectAttribute>
+                            <ObjectAttribute id="ObjectHeaderAttributeCreatedByName" text="{header>/CreatedByName}" press="onShowQuickViewO" active="true"></ObjectAttribute>
                             <ObjectAttribute id="ObjectHeaderAttributeForwardedBy"
                                 text="{parts:[{path : 'header>/ForwardedByName'}]}"
-                                press="onForwardedPress" active="true"></ObjectAttribute>
+                                press="onShowQuickViewO" active="true"></ObjectAttribute>
                             <ObjectAttribute id="ObjectHeaderAttributeSubstitutedBy"
                                 text="Sustituido por {parts:[{path : 'header>/SubstitutingForName'}]}"
-                                press="onSubstitutingPress" active="true"></ObjectAttribute>
+                                press="onShowQuickView" active="true"></ObjectAttribute>
                         </attributes>
                         <!-- @ExtensionPoint extHeaderInfo: header information -->
                         <core:ExtensionPoint name="extHeaderInfo"/>
@@ -112,13 +113,21 @@
                                                             <Label text="{i18n>view.PurchaseOrder.accountAssignmentLabel}"></Label>
                                                         </form:label>
                                                         <form:fields>
-                                                            <VBox>
-                                                                <Text text="{detail>/HeaderInfo/AccountCategoryDescription} {detail>/HeaderInfo/AccountDescription} ({detail>/HeaderInfo/AccountNumber})"/>
-                                                                <Text text="Cuenta de mayor {detail>/HeaderInfo/GlAccountDescription} ({detail>/HeaderInfo/GlAccountNumber})"/>
-                                                                <layoutData>
-                                                                        <layout:ResponsiveFlowLayoutData weight="2"></layout:ResponsiveFlowLayoutData>
-                                                                </layoutData>
-                                                            </VBox>
+                                                           <VBox>
+                                                            <Text text="{
+                                                                parts: [
+                                                                    {path: 'detail>/HeaderInfo/AccountCategoryDescription'},
+                                                                    {path: 'detail>/HeaderInfo/AccountDescription'},
+                                                                    {path: 'detail>/HeaderInfo/AccountNumber'},
+                                                                    {path: 'detail>/HeaderInfo/GlAccountDescription'},
+                                                                    {path: 'detail>/HeaderInfo/GlAccountNumber'}
+                                                                ],
+                                                                formatter: '.formatCostAssignment'
+                                                            }"/>
+                                                            <layoutData>
+                                                                <layout:ResponsiveFlowLayoutData weight="2"/>
+                                                            </layoutData>
+                                                        </VBox>
                                                         </form:fields>
                                                     </form:FormElement>
 
@@ -195,14 +204,12 @@
                                 </content>
                             </IconTabFilter>
 
-                            <IconTabFilter id="IconTabBarFilterPRNotes" key="Notes" count="{NumberOfNotes}"
+                            <IconTabFilter id="IconTabBarFilterPRNotes" key="Notes" count="{detail>/NumberOfNotes}"
                             visible="{path : 'NumberOfNotes', formatter : 'pecogaapordenescompras.util.Conversions.notesVisibilityTrigger'}"
                             icon="sap-icon://notes">
                               <List id="listNotes" showSeparators="None" inset="true" items="{path : 'detail>/Notes/results'}">
                                 <FeedListItem id="NoteTemplate"
-                                    sender="{detail>NoteIsApproverNote}"
                                     icon="{detail>Thumbnail}"
-                                    timestamp="{detail>CreatedAt}"
                                     senderPress="onNoteSenderPress" text="{detail>Text}" info="{detail>TypeDescription}"></FeedListItem>
                               </List>
                            </IconTabFilter>
@@ -295,6 +302,7 @@
                                 </cells>
                             </ColumnListItem>
                         </items>
+                        
                     </Table>
                 </content>
                 <!-- </layout:VerticalLayout> -->
@@ -302,6 +310,187 @@
                     <Bar id="detailFooter"></Bar>
                 </footer>
             </Page>
+
+           <Page id="idItemDetailPage">
+                    <customHeader>
+                        <Toolbar>
+                            <Button icon="sap-icon://arrow-left" press="onBackPress" type="Transparent" tooltip="Volver" />
+                            <Title text="Posición {detalle>/ItemNumberFormatted} de {detalle>/NumberOfItems}" level="H4" />
+                        </Toolbar>
+                    </customHeader>
+
+                    <VBox>
+                        <!-- Cabecera -->
+                        <Panel>
+                            <content>
+                                <HBox justifyContent="SpaceBetween" alignItems="Center" width="100%">
+                                    <VBox width="60%">
+                                        <Title text="{detalle>/Description}" level="H3"/>
+                                        <Text text="{detalle>/ItemCategoryDescription}" />
+                                    </VBox>
+                                    <VBox alignItems="End" width="40%">
+                                        <Text text="{detalle>/Value}" class="sapMTextLarge sapMTextBold"/>
+                                        <Text text="{detalle>/Currency}" class="sapMTextSmall"/>
+                                    </VBox>
+                                </HBox>
+                            </content>
+                        </Panel>
+
+                        <!-- Información (Centrado) -->
+                        <Panel headerText="Información">
+                            <content>
+                                <VBox alignItems="Center">
+                                    <HBox>
+                                        <Label text="Grupo de materiales: " width="10rem"/>
+                                        <Text text="{= ${detalle>/ProductDetails/MaterialGroupDescription} + ' (' + ${detalle>/ProductDetails/MaterialGroup} + ')' }" />
+                                    </HBox>
+                                </VBox>
+                            </content>
+                        </Panel>
+
+                        <!-- Entrega (Centrado y con formato de fecha) -->
+                        <Panel>
+                            <headerToolbar>
+                                <Toolbar>
+                                    <Title text="{path: 'detalle>/DeliveryDate', formatter: '.formatFechaUTCC'}" textAlign="Initial"/>
+                                </Toolbar>
+                            </headerToolbar>
+                             <content>
+                                <VBox alignItems="Center">
+                                    <HBox>
+                                        <VBox width="5rem">
+                                            <Label text="Centro: " />
+                                            <Label text="Dirección: " />
+                                        </VBox>
+                                        <VBox>
+                                            <Text text="{detalle>/DeliveryAddress/PlantName}" />
+                                            <Text text="{detalle>/DeliveryAddress/AddressString}" />
+                                        </VBox>
+                                    </HBox>
+                                </VBox>
+                            </content>
+                        </Panel>
+
+                        <!-- Líneas de servicio -->
+                        <Panel headerText="Líneas de servicio ({= ${detalle>/ServiceLines/results}.length})">
+                            <content>
+                                <Table items="{detalle>/ServiceLines/results}">
+                                    <columns>
+                                        <Column>
+                                            <Text text="Descripción" />
+                                        </Column>
+                                        <Column>
+                                            <Text text="Cantidad" />
+                                        </Column>
+                                        <Column hAlign="Right">
+                                            <Text text="Subtotal" />
+                                        </Column>
+                                    </columns>
+                                    <items>
+                                        <ColumnListItem type="Navigation" press="onServiceLinePress">
+                                            <cells>
+                                                <Text text="{detalle>Description}" class="sapMTextBold"/>
+                                                <Text text="{detalle>Quantity} {detalle>UnitDescription}" />
+                                                <Text text="{detalle>Value} {detalle>Currency}" textAlign="Right" />
+                                            </cells>
+                                        </ColumnListItem>
+                                    </items>
+                                </Table>
+                            </content>
+                        </Panel>
+
+                        <!-- Condiciones de Precio (Inicio y final) -->
+                        <Panel headerText="Condiciones de precio">
+                            <content>
+                                <Table items="{detalle>/PricingConditions/results}">
+                                    <columns>
+                                        <Column>
+                                            <Text text="Descripción" />
+                                        </Column>
+                                        <Column hAlign="Right">
+                                            <Text text="Precio" />
+                                        </Column>
+                                    </columns>
+                                    <items>
+                                        <ColumnListItem>
+                                            <cells>
+                                                <Text text="{detalle>Description} {detalle>PricingConditionType}" class="sapMTextBold"/>
+                                                <Text text="{detalle>Value} {detalle>Currency}" textAlign="Right" />
+                                            </cells>
+                                        </ColumnListItem>
+                                    </items>
+                                </Table>
+                            </content>
+                        </Panel>
+                    </VBox>
+                </Page>
+
+             <Page id="idService" title="Detalle del servicio" >
+                <customHeader>
+                    <Toolbar>
+                        <!-- Botón de retroceso -->
+                        <Button 
+                            icon="sap-icon://arrow-left" 
+                            press="onBackPressService" 
+                            type="Transparent" 
+                            tooltip="Volver" />
+
+                            <!-- Texto dinámico de la posición -->
+                        <Title text="Línea de servicio {service>/NumberServiceLine} de {service>/ItemNumberFormatted} - Posición {service>/NumberOfItems} de {service>/ItemNumberFormatted}" level="H3"/>
+                    </Toolbar>
+                </customHeader>
+             <content>
+            <VBox class="sapUiSmallMargin">
+                <!-- Título -->
+                <HBox justifyContent="SpaceBetween" alignItems="Center">
+                  <VBox class="sapUiSmallMargin">
+                     <Title text="{service>/ServiceLines/results/0/Description}" class="sapMTextLarge sapMTextBold"/>
+                  </VBox>
+                    <VBox class="sapUiSmallMarginEnd">
+                        <Text text="{service>/ServiceLines/results/0/Value}" class="sapMTextLarge sapMTextBold"/>
+                        <Text text="{service>/ServiceLines/results/0/Currency}" class="sapMTextSmall"/>
+                    </VBox>
+                </HBox>
+
+                <!-- Detalles del servicio -->
+                <VBox class="sapUiSmallMargin">
+                    <Text text="{service>/ServiceLines/results/0/Quantity} {service>/ServiceLines/results/0/UnitDescription}" />
+                    <Text text="{service>/ServiceLines/results/0/PricePerUnit} {service>/ServiceLines/results/0/Currency} / {service>/ServiceLines/results/0/Quantity} {service>/ServiceLines/results/0/UnitDescription}"/>
+                </VBox>
+
+                <!-- Sección de Asignación de Costes -->
+                <Panel headerText="Asignación de costes">
+                    <Table id="costAssignmentTable" inset="false" items="{service>/ServiceLines/results/0/Accountings/results}">
+                        <columns >
+                            <Column>
+                                <Text text="Objetos"/>
+                            </Column>
+                            <Column>
+                                <Text text="Cuenta mayor"/>
+                            </Column>
+                            <Column hAlign="Right">
+                                <Text text="Compartir"/>
+                            </Column>
+                        </columns>
+                        <items>
+                            <ColumnListItem>
+                                <cells>
+                                    <VBox>
+                                        <Text text="{service>AccountDescription} ({service>AccountNumber})" class="sapMTextBold"/>
+                                        <Text text="{service>AccountCategoryDescription}"/>
+                                    </VBox>
+                                    <Text text="{service>GlAccountDescription} ({service>GlAccountNumber})"/>
+                                    <Text text="{service>DistributionPercentage} %" textAlign="Right" />
+                                </cells>
+                            </ColumnListItem>
+                        </items>
+                    </Table>
+                </Panel>
+            </VBox>
+           </content>
+
+            </Page>
+                 
         </detailPages>
     </SplitApp>
 </mvc:View>
